templates/network.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: Networking for the CDK workshop

Resources:
  CustomVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Name: CustomVPC

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-central-1a
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Name: PublicSubnet1
      VpcId: !Ref CustomVPC


  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-central-1a
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Name: PublicSubnet1
      VpcId: !Ref CustomVPC


  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-central-1a
      CidrBlock: 10.0.10.0/2424
      Tags:
        - Name: PrivateSubnet1
      VpcId: !Ref CustomVPC

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-central-1a
      CidrBlock: 10.0.11.0/2424
      Tags:
        - Name: PrivateSubnet2
      VpcId: !Ref CustomVPC

    InternetGateway:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
          - Name: InternetGateway

    InternetGatewayAttachment:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
        VpcId: !Ref CustomVPC
        InternetGatewayId: !Ref InternetGateway

    PublicRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
        Tags:
          - Name: PublicRouteTable
        VpcId: !Ref CustomVPC


    PublicRoute:
      Type: AWS::EC2::Route
      Properties:
        DestinationCidrBlock: 0.0.0.0/0
        DestinationIpv6CidrBlock: String
        GatewayId: !Ref InternetGateway
        RouteTableId: !Ref PublicRouteTable

    RegionalNATGateway:
      Type: AWS::EC2::NatGateway
      Properties:
        AvailabilityMode: regional
          - AvailabilityZoneAddress
        ConnectivityType: public
        Tags:
          - Name: RegionalNATGateway
        VpcId: !Ref CustomVPC

    PrivateRouteTable:
      Type: AWS::EC2::RouteTable
      Properties:
        Tags:
          - Name: PrivateRouteTable
        VpcId: !Ref CustomVPC

    PrivateRoute:
      Type: AWS::EC2::Route
      Properties:
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref RegionalNATGateway
        RouteTableId: !Ref PrivateRouteTable

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      SubnetId: !Ref PrivateSubnet2


Outputs:
  VPCId:
    Value: !Ref CustomVPC
    Description: VPC ID

  PublicSubnet1Id:
    Value: !Ref PublicSubnet1
    Description: Public Subnet 1 ID

  PublicSubnet2Id:
    Value: !Ref PublicSubnet2
    Description: Public Subnet 2 ID

  PrivateSubnet1Id:
    Value: !Ref PrivateSubnet1
    Description: Private Subnet 1 ID

  PrivateSubnet2Id:
    Value: !Ref PrivateSubnet2
    Description: Private Subnet 2 ID
